added javadoc and boilerplate code for recruitment

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 jar {
+    duplicatesStrategy(DuplicatesStrategy.INCLUDE)
     manifest {
         attributes (
             'Main-Class': 'limehrm.Application'
