--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id 'application'
 }
-
+//mainClassName = 'limehrm.Application'
 jar {
     duplicatesStrategy(DuplicatesStrategy.INCLUDE)
     manifest {
